--- a/Assessment-1/kava.html
+++ b/Assessment-1/kava.html
@@ -15,7 +15,7 @@
             <br>
             <a href="E:\prepbytes\Html\Assessment-1\List doc.html">Link to Internal file</a>
             <p>Image kept inside folder</p>
-            <img src="/Assessment-1/image.png"alt=""
+            <img src="image.png"alt=""
             height="100px"
             width="100">
             <p>Uploaded image</p>
@@ -24,6 +24,6 @@
             width="100px">
             <hr>
             <h2>Lists</h2>
-            <a href="/Assessment-1/List doc.html">click Here</a>
+            <a href="List doc.html">click Here</a>
         </body>
 </html>
