--- a/Assessment-2/table.html
+++ b/Assessment-2/table.html
@@ -92,7 +92,7 @@
                 <td style="background-color: yellow;">25</td>
             </tr>
         </table>
-        <a href="/Assessment-2/Forms.html">Go back</a>
+        <a href="Forms.html">Go back</a>
         
     </body>
 </html>
