--- a/Assessment-3/webpage.html
+++ b/Assessment-3/webpage.html
@@ -4,7 +4,7 @@
         <title>iframe</title>
     </head>
     <body>
-        <iframe src="/Assessment-1/kava.html" height="650" width="500"></iframe>
-        <a href="/Assessment-3/document.html">click here to see the vedio</a>
+        <iframe src="https://ajaykumar302.github.io/prepbytes-ass/Assessment-1/kava.html" height="650" width="500"></iframe>
+        <a href="document.html">click here to see the vedio</a>
     </body>
 </html>
