--- a/Assessment-1/List doc.html
+++ b/Assessment-1/List doc.html
@@ -70,6 +70,6 @@
             </ul>
             <li>Cloud Service</li>
         </ul>
-        <a href="/Assessment-1/kava.html">Go back</a>
+        <a href="kava.html">Go back</a>
     </body>
 </html>
