--- a/Assessment-2/Forms.html
+++ b/Assessment-2/Forms.html
@@ -5,7 +5,7 @@
             </head>
             <body>
                 <h1>FORMS</h1>
-                <form action="/Assessment-2/doc.html" method="get">
+                <form action="doc.html" method="get">
                     <label for="fname">Name</label>
                     <input type="text" id="fname" name="fname"placeholder="name"><br><br>
                     <label for="Email">Email address</label>
@@ -32,7 +32,7 @@
                     <input type="submit" value="Submit">
                     <br>
                     <h1>TABLES</h1>
-                    <a href="/Assessment-2/table.html">Click Here</a>
+                    <a href="table.html">Click Here</a>
                 
 
 
